installed electron and npm locally to run; updated electron versions in these files

--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "main": "main.js",
   "scripts": {
-    "start" : "vue-cli-service build && electron .",
+    "start": "vue-cli-service build && electron .",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -21,6 +21,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^35.1.4",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
