--- a/electron-vue/package.json
+++ b/electron-vue/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/daygrid": "^6.1.17",
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/vue3": "^6.1.17",
+    "better-sqlite3": "^11.9.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
